k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team2-final-frontend
spec:
  selector:
    app: team2-final-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
