k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: team2-nextjs-frontend
spec:
  to:
    kind: Service
    name: team2-nextjs-frontend
